fix polaroid overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -113,7 +113,8 @@ footer {
 #hero,
 #skills,
 #projects,
-#what-i-offer {
+#what-i-offer,
+footer {
   padding: 2rem 2.5vw;
 }
 
@@ -357,7 +358,7 @@ h2,
   padding-bottom: 16px;
   text-align: center;
   margin: 0 auto;
-  max-width: 200px;
+  max-width: 250px;
   transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   transform: rotate(-3deg);
   margin-top: 1rem;
